# lucida

./: Makefile  README.md
lucida/: .gitconfig  .gitignore  Makefile.am  README.md  build.gradle  configure.ac  settings.gradle
lucida/calendar/: build.gradle  settings.gradle
lucida/calendar/src/main/java/ai/lucida/calendar/: CAServiceHandler.java  CalendarConsoleClient.java  CalendarDaemon.java  TextProcessor.java
lucida/calendar/src/main/java/ai/lucida/client/calendar/: CalendarConsoleClient.java
lucida/calendar/src/main/java/ai/lucida/service/calendar/: CAServiceHandler.java  CalendarDaemon.java  TextProcessor.java
lucida/commandcenter/: Makefile  start_server.sh  stop_server.sh
lucida/djinntonic/dig/: .gitignore  DIGHandler.cpp  DIGHandler.h  DIGServer.cpp  Makefile.am
lucida/djinntonic/face/: .gitignore  FACEHandler.cpp  FACEHandler.h  FACEServer.cpp  Makefile.am
lucida/djinntonic/imc/: .gitignore  IMCHandler.cpp  IMCHandler.h  IMCServer.cpp  Makefile.am
lucida/include/lucida/: call.h  refcount.h  request_builder.h  service_acceptor.h  service_connector.h
lucida/questionanswering/src/main/java/ai/lucida/qa/: KnowledgeBase.java  QADaemon.java  QAServiceHandler.java
lucida/questionanswering/src/test/java/ai/lucida/qa/: QAClient.java
lucida/src/main/cpp/: .gitignore  Makefile.am  request_builder.cpp  service_acceptor.cpp
lucida/src/main/cpp/lucida/: Makefile.am  service_acceptor.cpp  service_connector.cpp
lucida/src/main/cpp/lucida/utils/: path_ops.cpp
lucida/src/main/java/ai/lucida/grpc/: ServiceAcceptor.java  ServiceConnector.java  ServiceNames.java
lucida/src/main/proto/: lucida_service.proto
lucida/src/test/cpp/lucida/: Makefile.am  client_server.cpp  handler.cpp  handler.h
scripts/: start_server.sh
